[build-system]
requires = ["meson-python>=0.16", "meson>=1.2", "ninja", "numpy>=1.22"]
build-backend = "mesonpy"

[project]
name = "randompack"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*t-*"
build-frontend = "build"

[tool.cibuildwheel.macos]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*t-*"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"