[build-system]
requires = ["meson-python>=0.16", "meson>=1.2", "ninja", "numpy>=1.22", "cython"]
build-backend = "mesonpy"

[project]
name = "randompack"
version = "0.1.1"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[tool.cibuildwheel]
# build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
build = "cp313-*"
skip = "*t-*"
build-frontend = "build"

test-requires = ["numpy"]
test-command = """
python - <<'PY'
import numpy as np
import randompack
rng = randompack.Rng()
rng.unif(10)
Sig = np.array([[2,1],[1,2]])
rng.mvn(4, Sig)
print("wheel smoke test OK")
PY
"""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
config-settings = "setup-args=-Dblas=builtin"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
config-settings = "setup-args=-Dblas=builtin"

[tool.cibuildwheel.macos]
# archs = ["x86_64", "arm64"] set in the .yml file(s)
config-settings = "setup-args=-Dblas=accelerate"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"