[build-system]
requires = ["meson-python>=0.16", "meson>=1.2", "ninja", "numpy>=1.22", "cython"]
build-backend = "mesonpy"

[project]
name = "randompack"
version = "0.1.1"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.cibuildwheel]
skip = "*t-*"
test-requires = ["numpy"]
test-command = """
python -c "import numpy as np
import randompack
rng = randompack.Rng()
rng.unif(10)
Sig = np.array([[2,1],[1,2]])
rng.mvn(4, Sig)
print('wheel smoke test OK')
"
"""
